--- a/Pages/Consultas/Reporte_Clientes.razor
+++ b/Pages/Consultas/Reporte_Clientes.razor
@@ -5,87 +5,129 @@
 @using ProyectoFinal.BLL;
 
 <EditForm Model="lista">
-    
-    <a type="button" class="rz-border-radius-4 shadow border border-4 btn-lg btn btn-warning" data-toggle="tooltip"
-       data-placement="right" title="Regresar al formulario" href="clientes">
-        <i class="oi oi-arrow-circle-left"/>
-    </a>
-    <br/>
-    <p/>
-    
-    <div class="card shadow border border-4 rz-border-radius-4 card-footer d-flex justify-content-center">
 
-        <p/>
-        <div class="card-header rz-border-radius-4 shadow text-center">
+    <a type="button" class="rz-border-radius-4 shadow border border-4 btn-lg btn btn-warning" data-toggle="tooltip"
+        data-placement="right" title="Regresar al formulario" href="clientes">
+        <i class="oi oi-arrow-circle-left" />
+    </a>
+    <br />
+    <p />
+
+
+
+    <div class="card shadow border border-4 rz-border-radius-4 card-footer d-flex justify-content-center">
+        <div class="card-header text-center rz-border-radius-4 shadow">
             <h4>
                 Clientes
-                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-people-fill" viewBox="0 0 16 16">
-                    <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7Zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216ZM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z"/>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                    class="bi bi-people-fill" viewBox="0 0 16 16">
+                    <path
+                        d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7Zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216ZM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z" />
                 </svg>
             </h4>
         </div>
+    </div>
+    <p />
+    <div class="card shadow border border-4 rz-border-radius-4 card-footer d-flex justify-content-center">
 
-        <p/>
+        <div class="card-header rz-border-radius-4 shadow">
+            <div class="form-group col-md-3">
+                <InputSelect class="form-select text-14" @bind-Value="Filtro">
+                    <option value="0" disabled selected>Seleccione un filtro</option>
+                    <option value="1">Nombre</option>
+
+                </InputSelect>
+                <br>
+            </div>
+            <div class="Form-group col-md-1"></div>
+
+            <div class="Form-group col-3">
+                <label>Criterio</label>
+                <InputText class="form-control" @bind-Value="Criterio" placeholder="Ingrese el criterio de busqueda" />
+            </div>
+            <div class="form-group col"
+                style="position: absolute; top:0; right:0; margin-right: 750px; margin-top: 165px; ">
+                <button type="button" class="btn btn-consulta" @onclick="Consultar" title="Consultar Clientes">
+                    <i class="oi oi-grid-four-up mr-2" /> Consultar
+                </button>
+            </div>
+        </div>
+
+        <p />
         <hr>
         <table class="shadow 4 rz-border-radius-4 table table-light table-striped table-bordered">
             <thead class="thead">
-            <tr class="text-center table bg-reportecolor">
-                <th class="border border-3">ID</th>
+                <tr class="text-center table bg-reportecolor">
+                    <th class="border border-3">ID</th>
 
-                <th class="border border-3">Nombre</th>
+                    <th class="border border-3">Nombre</th>
 
-                <th class="border border-3">Email</th>
+                    <th class="border border-3">Email</th>
 
-                <th class="border border-3">Cedula</th>
+                    <th class="border border-3">Cedula</th>
 
-                <th class="border border-3">Telefono</th>
+                    <th class="border border-3">Telefono</th>
 
-                <th class="border border-3">Celular</th>
+                    <th class="border border-3">Celular</th>
 
-                <th class="border border-3">Dirección</th>
+                    <th class="border border-3">Dirección</th>
 
-               
-            </tr>
+                    <th class="border border-3"></th>
+
+                </tr>
             </thead>
             <tbody>
-            @if (lista.Count == 0)
-            {
-                <p/>
-                <span>Empty</span>
-            }
-            else
-            {
-                @foreach (var item in lista)
+                @if (lista.Count == 0)
                 {
-                    <tr class="text-center">
-                        <td class="border border-3">@item.ClienteId</td>
-
-                        <td class="border border-3">@item.Nombre</td>
-
-                        <td class="border border-3">@item.Email</td>
-
-                        <td class="border border-3">@item.Cedula</td>
-
-                        <td class="border border-3">@item.Telefono</td>
-
-                        <td class="border border-3">@item.Celular</td>
-
-                        <td class="border border-3">@item.Direccion</td>
-
-                        
-                    </tr>
+                    <p />
+                    <span>Empty</span>
                 }
-            }
+                else
+                {
+                    @foreach (var item in lista)
+                    {
+                        <tr class="text-center">
+                            <td class="border border-3">@item.ClienteId</td>
+
+                            <td class="border border-3">@item.Nombre</td>
+
+                            <td class="border border-3">@item.Email</td>
+
+                            <td class="border border-3">@item.Cedula</td>
+
+                            <td class="border border-3">@item.Telefono</td>
+
+                            <td class="border border-3">@item.Celular</td>
+
+                            <td class="border border-3">@item.Direccion</td>
+
+                            <td> <a type="button" class="rz-border-radius-1 shadow border border-1 btn-lg btn btn-primary"
+                                    data-toggle="tooltip" data-placement="right" title="Editar informacion"
+                                    href="clientes/@item.ClienteId">
+
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                                        class="bi bi-pencil-square" viewBox="0 0 16 16">
+                                        <path
+                                            d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                                        <path fill-rule="evenodd"
+                                            d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
+                                    </svg>
+                                </a></td>
+                        </tr>
+                    }
+                }
             </tbody>
         </table>
     </div>
-    <p/>
+    <p />
 </EditForm>
 
 @code {
 
 #nullable disable // Para quitar el aviso de nulls
     public DateOnly Fecha { get; set; }
+    public string Filtro;
+    public string Criterio;
 
     public List<Clientes> lista { get; set; } = new List<Clientes>();
 
@@ -99,4 +141,22 @@
         lista = clientesBLL.GetList(e => true);
     }
 
+    private void Consultar()
+    {
+        lista = new List<Clientes>();
+        clientes = new Clientes();
+
+        lista = clientesBLL.GetList(e => true);
+
+        if (Criterio != null)
+        {
+            switch (Filtro)
+            {
+                case "1": // Nombre suplidor
+                    lista = clientesBLL.GetList(p => p.Nombre.ToLower().Contains(Criterio.ToLower()));
+                    break;
+
+            }
+        }
+    }
 }
