--- a/Pages/Consultas/Reporte_Suplidores.razor
+++ b/Pages/Consultas/Reporte_Suplidores.razor
@@ -7,28 +7,55 @@
 <EditForm Model="lista">
 
     <a type="button" class="rz-border-radius-4 shadow border border-4 btn-lg btn btn-warning" data-toggle="tooltip"
-       data-placement="right" title="Regresar al formulario" href="suplidor">
-        <i class="oi oi-arrow-circle-left"/>
+        data-placement="right" title="Regresar al formulario" href="suplidor">
+        <i class="oi oi-arrow-circle-left" />
     </a>
-    <br/>
-    <p/>
-
+    <br />
     <div class="card shadow border border-4 rz-border-radius-4 card-footer d-flex justify-content-center">
 
-        <p/>
+        <p />
         <div class="card-header rz-border-radius-4 shadow text-center">
             <h4>
                 Suplidores
-                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-truck" viewBox="0 0 16 16">
-                    <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-truck"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
                 </svg>
             </h4>
         </div>
+    </div>
+    <p />
 
-        <p/>
-        <hr>
-        <table class="shadow 4 rz-border-radius-4 table table-light table-striped table-bordered">
-            <thead class="thead">
+    <div class="card shadow border border-4 rz-border-radius-4 card-footer d-flex justify-content-center">
+
+        <div class="form-group col-md-3">
+            <InputSelect class="form-select text-14" @bind-Value="Filtro">
+                <option value="0" disabled selected>Seleccione un filtro</option>
+                <option value="1">Nombre</option>
+
+            </InputSelect>
+            <br>
+        </div>
+        <div class="Form-group col-md-1"></div>
+
+        <div class="Form-group col-3">
+            <label>Criterio</label>
+            <InputText class="form-control" @bind-Value="Criterio" placeholder="Ingrese el criterio de busqueda" />
+        </div>
+        <div class="form-group col"
+            style="position: absolute; top:0; right:0; margin-right: 760px; margin-top: 93px; ">
+            <button type="button" class="btn btn-consulta" @onclick="Consultar" title="Consultar suplidores">
+                <i class="oi oi-grid-four-up mr-2" /> Consultar
+            </button>
+        </div>
+    </div>
+    <hr>
+
+    <p />
+    <hr>
+    <table class="shadow 4 rz-border-radius-4 table table-light table-striped table-bordered">
+        <thead class="thead">
             <tr class="text-center table bg-reportecolor">
                 <th class="border border-3">ID</th>
 
@@ -40,13 +67,15 @@
 
                 <th class="border border-3">Dirección</th>
 
-              
+                <th class="border border-3"></th>
+
+
             </tr>
-            </thead>
-            <tbody>
+        </thead>
+        <tbody>
             @if (lista.Count == 0)
             {
-                <p/>
+                <p />
                 <span>Empty</span>
             }
             else
@@ -64,20 +93,35 @@
 
                         <td class="border border-3">@item.Direccion</td>
 
-                       
+                        <td> <a type="button" class="rz-border-radius-1 shadow border border-1 btn-lg btn btn-primary"
+                                data-toggle="tooltip" data-placement="right" title="Editar informacion"
+                                href="suplidor/@item.SuplidorId">
+
+                                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                                    class="bi bi-pencil-square" viewBox="0 0 16 16">
+                                    <path
+                                        d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                                    <path fill-rule="evenodd"
+                                        d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
+                                </svg>
+                            </a></td>
+
                     </tr>
                 }
             }
-            </tbody>
-        </table>
-    </div>
-    <p/>
+        </tbody>
+    </table>
+
+    <p />
 </EditForm>
 
 @code {
 
 #nullable disable // Para quitar el aviso de nulls
     public DateOnly Fecha { get; set; }
+
+    public string Filtro;
+    public string Criterio;
 
     public List<Suplidor> lista { get; set; } = new List<Suplidor>();
 
@@ -88,7 +132,27 @@
 
     protected override void OnInitialized()
     {
+        Filtro = "0";
         lista = suplidorBLL.GetList(e => true);
     }
 
+    private void Consultar()
+    {
+        lista = new List<Suplidor>();
+        suplidor = new Suplidor();
+
+        lista = suplidorBLL.GetList(e => true);
+
+        if (Criterio != null)
+        {
+            switch (Filtro)
+            {
+                case "1": // Nombre suplidor
+                    lista = suplidorBLL.GetList(p => p.Nombre.ToLower().Contains(Criterio.ToLower()));
+                    break;
+
+            }
+        }
+
+    }
 }
