--- a/Pages/Registros/R_Suplidor.razor
+++ b/Pages/Registros/R_Suplidor.razor
@@ -54,10 +54,6 @@
                         <ValidationMessage For="@(() => suplidor.Direccion)" />
                         <br>
                     </div>
-
-
-
-
                 </div>
 
 
@@ -138,24 +134,24 @@
                         <InputDate @bind-Value="suplidor.Fecha" class="form-control bg-fechasColor" />
                         <br>
                     </div>
-                    
+
                 </div>
-                
-                <a data-toggle="tooltip "
-       data-placement="right "  style="position: absolute; top:0; right:0; margin-right: 20px; margin-top: 426px; ">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                fill="currentColor " class="bi bi-chat-left-text " viewBox="0 0 16 16 ">
-                                <path
-                                    d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
-                                <path
-                                    d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" />
-                            </svg>
 
-                            Puede consultar los suplidores en el boton indicado en naranja.
+                <a data-toggle="tooltip " data-placement="right "
+                    style="position: absolute; top:0; right:0; margin-right: 20px; margin-top: 426px; ">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor "
+                        class="bi bi-chat-left-text " viewBox="0 0 16 16 ">
+                        <path
+                            d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
+                        <path
+                            d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" />
+                    </svg>
 
-                        </a>
+                    Puede consultar los suplidores en el boton indicado en naranja.
+
+                </a>
             </div>
-            
+
 
             <br>
 
@@ -174,11 +170,11 @@
                     <button type="button" class="btn btn-lg btn-danger" @onclick="Eliminar" title="Eliminar suplidor">
                         <span class="oi oi-trash"> Eliminar</span>
                     </button>
-                    
+
                 </div>
-                
+
             </div>
-            
+
         </div>
     </div>
 </EditForm>
