--- a/Pages/Consultas/C_Suplidor.razor
+++ b/Pages/Consultas/C_Suplidor.razor
@@ -6,21 +6,26 @@
 <EditForm Model="suplidor">
 
     <a type="button" class="rz-border-radius-1 shadow border border-1 btn-lg btn btn-warning" data-toggle="tooltip"
-       data-placement="right" title="Registrar nuevo suplidor" href="suplidor">
-        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-truck" viewBox="0 0 16 16">
-                            <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
-                        </svg>
+        data-placement="right" title="Registrar nuevo suplidor" href="suplidor">
+        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-truck"
+            viewBox="0 0 16 16">
+            <path
+                d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
+        </svg>
     </a>
-    <br/>
-    <p/>
+    <br />
+    <p />
 
     <div class="card ">
         <div class="card-header">
 
             <h4>
-                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-card-checklist" viewBox="0 0 16 16">
-                    <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h13zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z"/>
-                    <path d="M7 5.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0zM7 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0z"/>
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                    class="bi bi-card-checklist" viewBox="0 0 16 16">
+                    <path
+                        d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h13zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z" />
+                    <path
+                        d="M7 5.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0zM7 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0z" />
                 </svg> Consulta Suplidores <i class="oi oi-cart"></i>
             </h4>
         </div>
@@ -28,7 +33,6 @@
         <div class="card-body">
             <form>
                 <div class="input-group d-flex align-items-end">
-
                     <div class="form-group col-md-3">
                         <InputSelect class="form-select text-14" @bind-Value="Filtro">
                             <option value="0" disabled selected>Seleccione un filtro</option>
@@ -43,11 +47,11 @@
                     <div class="Form-group col-3">
                         <label>Criterio</label>
                         <InputText class="form-control" @bind-Value="Criterio"
-                                   placeholder="Ingrese el criterio de busqueda"/>
+                            placeholder="Ingrese el criterio de busqueda" />
                     </div>
 
                     <button type="button" class="btn btn-consulta" @onclick="Consultar" title="Consultar suplidores">
-                        <i class="oi oi-grid-four-up mr-2"/> Consultar
+                        <i class="oi oi-grid-four-up mr-2" /> Consultar
                     </button>
                 </div>
                 <hr>
@@ -56,13 +60,13 @@
 
                     <div class="Form-group col-2">
                         <span class="form-group ">Desde</span>
-                        <InputDate @bind-Value="fechaDesde" class="form-control"/>
+                        <InputDate @bind-Value="fechaDesde" class="form-control" />
                     </div>
 
 
                     <div class="Form-group col-2">
                         <span class="form-group">Hasta</span>
-                        <InputDate @bind-Value="fechaHasta" class="form-control"/>
+                        <InputDate @bind-Value="fechaHasta" class="form-control" />
                     </div>
                 </div>
             </form>
@@ -70,65 +74,69 @@
 
         <table class="table table-light table-striped table-bordered">
             <thead class="thead">
-            <tr class="table">
+                <tr class="table">
 
-                <th>Nombre</th>
+                    <th>Nombre</th>
 
-                <th>Email</th>
+                    <th>Email</th>
 
-                <th>Teléfono</th>
+                    <th>Teléfono</th>
 
-                <th>
-                    Dirección
-                    <div class="oi oi-map-marker"></div>
-                </th>
+                    <th>
+                        Dirección
+                        <div class="oi oi-map-marker"></div>
+                    </th>
 
-                <th>
-                    Categoria de articulo
-                    <div class="oi oi-credit-breack"></div>
-                </th>
+                    <th>
+                        Categoria de articulo
+                        <div class="oi oi-credit-breack"></div>
+                    </th>
 
-                <th>Fecha Ingreso</th>
+                    <th>Fecha Ingreso</th>
 
-                <th>Editar</th>
+                    <th>Editar</th>
 
-            </tr>
+                </tr>
             </thead>
             <tbody>
-            @if (suplidorList.Count == 0)
-            {
-                <span>Empty</span>
-            }
-            else
-            {
-                @foreach (var item in suplidorList)
+                @if (suplidorList.Count == 0)
                 {
-                    <tr>
-                        <td>@item.Nombre</td>
-
-                        <td>@item.Email</td>
-
-                        <td>@item.Telefono</td>
-
-                        <td>@item.Direccion</td>
-
-                        <td>@item.DescripcionArticulo</td>
-
-                        <td>@item.Fecha.ToString("dd/MM/yyyy")</td>
-
-                        <td>
-                             <a type="button" class="rz-border-radius-1 shadow border border-1 btn-lg btn btn-primary" data-toggle="tooltip"
-       data-placement="right" title="Editar informacion" href="suplidor/@item.SuplidorId">
-        
-            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
-  <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-  <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
-</svg>
-    </a>
-                        </td>
-                    </tr>
+                    <span>Empty</span>
                 }
-            }
+                else
+                {
+                    @foreach (var item in suplidorList)
+                    {
+                        <tr>
+                            <td>@item.Nombre</td>
+
+                            <td>@item.Email</td>
+
+                            <td>@item.Telefono</td>
+
+                            <td>@item.Direccion</td>
+
+                            <td>@item.DescripcionArticulo</td>
+
+                            <td>@item.Fecha.ToString("dd/MM/yyyy")</td>
+
+                            <td>
+                                <a type="button" class="rz-border-radius-1 shadow border border-1 btn-lg btn btn-primary"
+                                    data-toggle="tooltip" data-placement="right" title="Editar informacion"
+                                    href="suplidor/@item.SuplidorId">
+
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                                        class="bi bi-pencil-square" viewBox="0 0 16 16">
+                                        <path
+                                            d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                                        <path fill-rule="evenodd"
+                                            d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
+                                    </svg>
+                                </a>
+                            </td>
+                        </tr>
+                    }
+                }
             </tbody>
         </table>
     </div>
