--- a/Pages/Consultas/Inventario.razor
+++ b/Pages/Consultas/Inventario.razor
@@ -44,7 +44,17 @@
   <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
 </svg>
                     </button>
-                    
+                    <a type="button" class="rz-border-radius-1 shadow border border-1 btn-lg btn btn-Inventario"
+            style="position: absolute; top:0;  right:0; margin-right: 25px; margin-top: 10px;" data-toggle="tooltip"
+            data-placement="right" title="Reporte de articulos" href="reportearticulos"><span>Articulos</span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                class="bi bi-minecart-loaded" viewBox="0 0 16 16">
+                <path
+                    d="M4 15a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm0 1a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm8-1a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm0 1a2 2 0 1 0 0-4 2 2 0 0 0 0 4zM.115 3.18A.5.5 0 0 1 .5 3h15a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 14 12H2a.5.5 0 0 1-.491-.408l-1.5-8a.5.5 0 0 1 .106-.411zm.987.82 1.313 7h11.17l1.313-7H1.102z" />
+                <path fill-rule="evenodd"
+                    d="M6 1a2.498 2.498 0 0 1 4 0c.818 0 1.545.394 2 1 .67 0 1.552.57 2 1h-2c-.314 0-.611-.15-.8-.4-.274-.365-.71-.6-1.2-.6-.314 0-.611-.15-.8-.4a1.497 1.497 0 0 0-2.4 0c-.189.25-.486.4-.8.4-.507 0-.955.251-1.228.638-.09.13-.194.25-.308.362H3c.13-.147.401-.432.562-.545a1.63 1.63 0 0 0 .393-.393A2.498 2.498 0 0 1 6 1z" />
+            </svg>
+        </a>
                 </div>
                     
                    
@@ -151,13 +161,13 @@
 </svg>
                         </button>
 
-                        <label>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</label>
+                        <label>ㅤㅤㅤㅤㅤㅤㅤㅤ</label>
            
 
                         <a data-toggle="tooltip"
        data-placement="right" title="Realizar reorden" href="reorden" class="text-consulta">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                fill="currentColor" class="bi bi-chat-left-text" viewBox="0 0 16 16">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15"
+                                fill="currentColor" class="bi bi-chat-left-text" viewBox="0 0 15 15">
                                 <path
                                     d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
                                 <path
